--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,11 @@
 {
-  "devCommand": "uvicorn main:app --host 0.0.0.0 --port 3000",
   "builds": [
     {
       "src": "api/index.py",
-      "use": "@vercel/python"
+      "use": "@vercel/python",
+      "config": {
+        "runtime": "python3.10"
+      }
     }
   ],
   "routes": [
@@ -11,5 +13,9 @@
       "src": "/(.*)",
       "dest": "api/index.py"
     }
-  ]
+  ],
+  "env": {
+    "PYTHON_VERSION": "3.12"
+  },
+  "devCommand": "uvicorn main:app --host 0.0.0.0 --port 8000"
 }
