--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,9 @@
 {
+  "devCommand": "uvicorn main:app --host 0.0.0.0 --port 3000",
   "builds": [
     {
       "src": "api/index.py",
-      "use": "@vercel/python",
-      "config": {
-        "runtime": "python3.10"
-      }
+      "use": "@vercel/python"
     }
   ],
   "routes": [
@@ -13,9 +11,5 @@
       "src": "/(.*)",
       "dest": "api/index.py"
     }
-  ],
-  "env": {
-    "PYTHON_VERSION": "3.12"
-  },
-  "devCommand": "uvicorn main:app --host 0.0.0.0 --port 8000"
+  ]
 }
